--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
       { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "index.js" }
+      { "src": "/api/classify-number", "dest": "index.js" }
     ]
   }
